@@ -1,6 +1,14 @@
 2008-05-01  Paolo Borelli  <pborelli@katamail.com>
 
 	* src/baobab-utils.c:
+	* src/baobab-treeview.c:
+	* src/callbacks.c:
+	Factor out a can_trash_file util and use the proper display name
+	when showing an error about failed trashing of a file.
+
+2008-05-01  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/baobab-utils.c:
 	* src/baobab.c:
 	* src/baobab.h:
 	* src/callbacks.c:
